# graduality

./: Cargo.toml  README.md
.github/workflows/: continuous_integration.yml
src/: configuration.rs  easing.rs  main.rs  shader.wgsl  state.rs
