[package]
name = "graduality"
version = "0.1.0"
authors = ["Philipp Emanuel Weidmann <pew@worldwidemann.com>"]
description = "Create stunning screensavers from simple configuration files"
repository = "https://github.com/p-e-w/graduality"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
pollster = "0.2.5"
winit = "0.27.5"
wgpu = "0.14.0"
bytemuck = { version = "1.12.2", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
toml = "0.5.9"
csscolorparser = { version = "0.6.2", features = ["lab", "serde"] }
simple-easing = "1.0.0"
phf = { version = "0.11.1", features = ["macros"] }
